# easy-ecc

./: .gitignore  CMakeLists.txt  README.md  data  diff.py
pscript/: parse_16.py  parse_24.py  time.py
src/: CMakeLists.txt  README.md  field.c
src/back/: func_trace.c
src/cmake/Platform/: Arduino.cmake
src/ecc/: ecc_decrypt.c  ecc_encrypt.c  ecc_make_key.c  ecc_shared_secret.c  ecc_sign.c  ecc_verify.c
src/ecc/avr/: ecc_decrypt.c  ecc_encrypt.c  ecc_make_key.c  ecc_sign.c  ecc_verify.c
src/field/: field.c  field_add.c  field_inv.c  field_mod.c  field_mul.c  field_rand.c  field_sqr.c  field_sqrt.c  field_sub.c
src/field/avr/: field.c  field_add.c  field_inv.c  field_mod.c  field_mul.c  field_rand.c  field_sqr.c  field_sqrt.c  field_sub.c
src/hash/: SHA_256.c  pad_message.c  parse_message.c
src/hash/avr/: SHA_256.c  sigma.c
src/include/: curves.h  ecc.h  field.h  hash.h  parse.py  point.h
src/include/avr/: curves.h  field.h  hash.h  parse.py  point.h
src/point/: point.c  point_add.c  point_dbl.c  point_mul.c
src/point/avr/: point.c  point_add.c  point_dbl.c  point_mul.c
src/test/: CMakeLists.txt  field.c  hash.c  key.c  key.cpp  point.c  point.cpp
src/test/avr/: field.c  key.c  point.c
test/: run.sh  test.sh
test/data/: keytest-data
test/results/hotplug/release/: keytest-release-large.
test/scripts/: run-debug.sh  run-release.sh  runcommon.sh  runparsec.sh
