
aux_source_directory(. TEMP_SRC)
SET (MY_SRC ${TEMP_SRC})
aux_source_directory(./ecc TEMP_SRC)
SET (MY_SRC ${TEMP_SRC})
aux_source_directory(./point TEMP_SRC)
SET (MY_SRC ${TEMP_SRC})
aux_source_directory(./field TEMP_SRC)
SET (MY_SRC ${TEMP_SRC})
aux_source_directory(./hash TEMP_SRC)
SET (MY_SRC ${TEMP_SRC})

add_library(ecc ${MY_SRC})
if(CMAKE_BUILD_TYPE MATCHES Debug)
    target_compile_definitions(ecc PUBLIC DEBUG)
endif(CMAKE_BUILD_TYPE MATCHES Debug)
